Fix build with GMP 5.1.0

GMP 5.1.0 no longer has implicit conversions to mpz_class from mpq_class
or mpf_class.  So we have to have an explicit conversion.

BUG: 312481